[package]
name = "tictactoe-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
dotenvy = "0.15.7"
log = "0.4.20"
pretty_env_logger = "0.5.0"
shrinkwraprs = "0.3.0"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "sync"] }
itertools = "0.11.0"
kiam = "0.1.1"
